[gd_scene load_steps=7 format=3 uid="uid://xoh0qax0qa2n"]

[ext_resource type="Script" uid="uid://bcjc8a4kn6yi" path="res://scripts/game.gd" id="1_lbhrr"]
[ext_resource type="Texture2D" uid="uid://bl6ulm7bmho1" path="res://New Assets/Stars.png" id="2_iywne"]
[ext_resource type="PackedScene" uid="uid://d3kk37cic0lfv" path="res://scenes/player.tscn" id="2_lnu2h"]
[ext_resource type="PackedScene" uid="uid://o3kv5i7myrix" path="res://scenes/enemy_spawner.tscn" id="3_lnu2h"]
[ext_resource type="PackedScene" uid="uid://dobwtfppcb86r" path="res://scenes/hud.tscn" id="5_iywne"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lnu2h"]
size = Vector2(20, 53.0618)

[node name="Game" type="Node2D"]
script = ExtResource("1_lbhrr")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1348.0
offset_bottom = 774.0
scale = Vector2(0.428568, 0.353742)
texture = ExtResource("2_iywne")
stretch_mode = 1

[node name="Background2" type="TextureRect" parent="."]
offset_left = 863.0
offset_top = -65.0
offset_right = 2911.0
offset_bottom = 1983.0
scale = Vector2(0.526609, 0.386715)
texture = ExtResource("2_iywne")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("2_lnu2h")]
position = Vector2(83, 392)
scale = Vector2(1.00922, 1.00992)

[node name="EnemySpawner" parent="." instance=ExtResource("3_lnu2h")]

[node name="Deathzone" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deathzone"]
position = Vector2(-135, 369.087)
rotation = 3.14159
scale = Vector2(-1.82909, -26.6054)
shape = SubResource("RectangleShape2D_lnu2h")

[node name="UI" type="CanvasLayer" parent="."]
layer = 100

[node name="HUD" parent="UI" instance=ExtResource("5_iywne")]

[connection signal="took_damage" from="Player" to="." method="_on_player_took_damage"]
[connection signal="enemy_spawned" from="EnemySpawner" to="." method="_on_enemy_spawner_enemy_spawned"]
[connection signal="area_entered" from="Deathzone" to="." method="_on_deathzone_area_entered"]
